Fix incorrect Ace gutter alignment
Somewhere along the line, Ace moved the responsibility for providing the gutter CSS from the theme to the hosting environment. (Maybe so the hosting environment can put in extra space for code folding if needed?) When I recompiled the theme files (using src/gwt/tools/compile-themes) for foreign chunk support--i.e. Sweave chunk highlighting--the gutter formatting CSS was stripped. I've now added it back, in themeStyles.css.

--- a/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
+++ b/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
@@ -2,7 +2,7 @@
 @eval fixedWidthFont org.rstudio.core.client.theme.ThemeFonts.getFixedWidthFont();
 
 @external fixedWidthFont;
-@external ace_editor, ace_text-layer, ace_gutter;
+@external ace_editor, ace_text-layer, ace_gutter, ace_gutter-layer, ace_gutter-cell;
 @external cueText;
 @external search;
 @external highlight, disabled;
@@ -151,6 +151,15 @@ pre {
 
 .ace_editor .ace_gutter {
    width: 3.3em !important;
+}
+
+.ace_editor .ace_gutter-layer {
+   position: relative;
+   text-align: right;
+}
+
+.ace_editor .ace_gutter-cell {
+   padding-right: 6px;
 }
 
 .gwt-MenuBar {
